--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.0.8", features = ["derive"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+home = "0.5"
