--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-clap = { version = "4.0.8", features = ["derive"] }
+clap = { version = "4.0.8", features = ["derive", "env"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 dirs = "4.0.0"
-thiserror = "1.0"
